# mindfuck

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
